# mcp-supabase-expense-tracker

./: README.md  categories.json  fastmcp.json  main.py  pyproject.toml
database/: crud.py  database.py  models.py  schemas.py
